[tool.poetry]
name = "nhtsa-ciss-python"
version = "0.1.0"
description = ""
authors = ["Marat Kopytjuk <kopytjuk@gmail.com>"]
readme = "README.md"
packages = [{include = "nhtsa_ciss_python"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
