[tool.poetry]
name = "nhtsa-ciss-python"
version = "0.1.0"
description = ""
authors = ["Marat Kopytjuk <kopytjuk@gmail.com>"]
readme = "README.md"
packages = [{include = "nhtsa_ciss_python"}]

[tool.poetry.dependencies]
python = "^3.8"
shapely = "^1.8.5.post1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
